# ghost

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  OS  OVERNIGHT_REPORT.md  PAYOUT_FIX_PLAN.md  README.md  SECURITY.md  TODO_VERIFY_NODE_PAYOUTS.md  audit.toml  git clone  manual.yml
apps/ghost-tap/core/: Cargo.toml  build.rs
apps/ghost-tap/core/src/: ghost_pay.udl  glyph.rs  lib.rs
apps/ghost-tap/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/ghost-tap/tests/integration/: Cargo.toml
apps/wraith-wallet/cli/: Cargo.toml
apps/wraith-wallet/cli/src/: main.rs
apps/wraith-wallet/core/: Cargo.toml
apps/wraith-wallet/core/examples/: synthetic_candidate.rs
apps/wraith-wallet/core/src/: bitcoind.rs  descriptor.rs  ghostd.rs  keystore.rs  lib.rs  lock_recovery.rs  mainnet_guard.rs  psbt.rs  wraith.rs  wraith_signer.rs
apps/wraith-wallet/core/tests/: chain_scan_utxos.rs  gsp_mock.rs  l2_transfer_e2e.rs  lock_recovery_e2e.rs  peer_rotation.rs  prepare_lock_e2e.rs  watch_payments.rs  wraith_e2e.rs
apps/wraith-wallet/daemon/: Cargo.toml
apps/wraith-wallet/daemon/src/: main.rs
apps/wraith-wallet/daemon/tests/: check_for_update.rs  mainnet_guards.rs  wallet_lifecycle.rs  watch_payments_daemon.rs
apps/wraith-wallet/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/wraith-wallet/ipc/: Cargo.toml
apps/wraith-wallet/ipc/src/: lib.rs
bins/ghost-light-wallet-cli/: Cargo.toml
bins/ghost-light-wallet-cli/src/: main.rs
bins/ghost-light-wallet-tui/: Cargo.toml
bins/ghost-light-wallet-tui/src/: main.rs
bins/ghost-node-tui/: Cargo.toml
bins/ghost-node-tui/src/: app.rs  config.rs  main.rs  setup.rs  theme.rs
bins/ghost-node-tui/src/api/: client.rs  mod.rs  types.rs
bins/ghost-node-tui/src/pages/: backup.rs  bitcoin.rs  l2_service.rs  logs.rs  mining.rs  mod.rs  overview.rs  settings.rs  swarm.rs  watchdog.rs
bins/ghost-node-tui/src/widgets/: mod.rs
bins/ghost-node-tui/src/wizard/: build_run.rs  change_setup.rs  ghost_mode.rs  haze.rs  initial_setup.rs  l2_create_lock.rs  l2_ghost_id.rs  l2_withdraw.rs  mempool_policy.rs  mod.rs  pool_setup.rs  reaper.rs  render.rs  shroud.rs
bins/ghost-pay/: Cargo.toml
bins/ghost-pay/examples/: test_confidential_e2e.rs  test_encryption_e2e.rs  test_glyph_e2e.rs  test_l2_circuits_e2e.rs  test_note_spend_e2e.rs
bins/ghost-pay/src/: main.rs
bins/ghost-pool/: Cargo.toml
bins/ghost-pool/src/: capacity.rs  coinbase_verifier.rs  connection.rs  glyph_handler.rs  l2_producer.rs  lib.rs  main.rs  payout.rs  payout_commitment.rs  payout_validator.rs  reaper_stats.rs  registry.rs  reorg.rs  round.rs  rpc.rs  self_check.rs  share_handler.rs  stratum.rs  template.rs  template_provider.rs  treasury.rs  validation.rs
bins/ghost-setup/: Cargo.toml
bins/ghost-setup/src/: main.rs
bins/translator/: Cargo.toml
bins/translator/src/: main.rs
crates/ghost-glyph/: Cargo.toml
crates/ghost-glyph/src/: error.rs  glyph.rs  lib.rs  palette.rs  render.rs
crates/ghost-gsp-proto/: Cargo.toml
crates/ghost-gsp-proto/src/: auth.rs  error.rs  lib.rs  lock.rs  messages.rs  payment.rs  validation.rs
crates/ghost-keys/: Cargo.toml
crates/ghost-keys/src/: config.rs  derivation.rs  encryption.rs  error.rs  ghost_id.rs  keys.rs  labels.rs  lib.rs  metadata.rs  scanning.rs
crates/ghost-light-wallet/: Cargo.toml
crates/ghost-light-wallet/examples/: demo.rs  networks.rs
crates/ghost-light-wallet/src/: error.rs  instant.rs  lib.rs  signing.rs  wallet.rs  wraith.rs
crates/ghost-light-wallet/src/confidential/: mod.rs  notes.rs  params_cache.rs  prover.rs  scanner.rs  tree_sync.rs
crates/ghost-light-wallet/src/gsp/: client.rs  failover.rs  mod.rs
crates/ghost-light-wallet/src/keys/: master.rs  mod.rs  storage.rs
crates/ghost-light-wallet/src/locks/: create.rs  jump.rs  mod.rs
crates/ghost-locks/: Cargo.toml
crates/ghost-locks/src/: affordability.rs  denomination.rs  error.rs  jump.rs  lib.rs  lock.rs  script.rs  state.rs  timelock.rs
crates/ghost-mpc/: Cargo.toml
crates/ghost-mpc/src/: contribution.rs  errors.rs  lib.rs  manager.rs  params.rs  sync.rs
crates/ghost-reconciliation/: Cargo.toml
crates/ghost-reconciliation/src/: batch.rs  broadcaster.rs  commitment.rs  coordinator.rs  error.rs  executor.rs  fee_distribution.rs  lib.rs  proof.rs  rpc.rs  rules.rs  settlement.rs  transaction.rs  verifier.rs
crates/ghost-zkp/: Cargo.toml
crates/ghost-zkp/src/: commitment_tree.rs  confidential_prover.rs  confidential_verifier.rs  consolidation_prover.rs  consolidation_verifier.rs  errors.rs  field_utils.rs  lib.rs  note_prover.rs  note_verifier.rs  payout_prover.rs  payout_verifier.rs  prover.rs  state_tree.rs  types.rs  unshield_prover.rs  unshield_verifier.rs  verifier.rs
crates/wraith-protocol/: Cargo.toml  DESIGN_LITE.md
crates/wraith-protocol/src/: blind.rs  bond.rs  coordinator.rs  coordinator_redundancy.rs  denomination.rs  entry_timing.rs  error.rs  executor.rs  lib.rs  lite_session.rs  phase.rs  remix.rs  rpc.rs  session.rs  single_round.rs  tier.rs
ghost-core/src/gsp/: CMakeLists.txt  gsp.cpp  gsp.h  gsp_auth.cpp  gsp_auth.h  gsp_wallet.cpp  gsp_wallet.h  gsp_ws.cpp  gsp_ws.h
ghost-core/src/haze/: CMakeLists.txt  block_reconstruct.cpp  block_reconstruct.h  block_stripper.cpp  block_stripper.h  bloom_filter.cpp  bloom_filter.h  checkpoint.cpp  checkpoint.h  checkpoint_signing.cpp  checkpoint_signing.h  chunk_downloader.cpp  chunk_downloader.h  exorcism.cpp  exorcism.h  exorcist.cpp  exorcist.h  field_classifier.cpp  field_classifier.h  haze_p2p.cpp  haze_p2p.h  headers_file.cpp  headers_file.h  legal_packet.cpp  legal_packet.h  mode_selector.cpp  mode_selector.h  stripped_block.cpp  stripped_block.h  swiftsync.cpp  swiftsync.h  swiftsync_view.h
ghost-core/src/qt/test/: apptests.h  (+4 more)
ghost-core/src/rung/: CMakeLists.txt  aggregate.cpp  aggregate.h  conditions.cpp  conditions.h  evaluator.cpp  evaluator.h  policy.cpp  policy.h  pq_verify.cpp  pq_verify.h  rpc.cpp  serialize.cpp  serialize.h  sighash.cpp  types.cpp  types.h
ghost-core/src/tor/: CMakeLists.txt  tor_process.cpp  tor_process.h
(+1208 files in other folders)
