#|======================================================================================================================|
#|                                                                                                                      |
#|  ‚ĖĄ‚ĖĄ‚ĖĄ‚ĖĄ    ‚Ėą‚Ėą‚Ėď‚ĖĄ‚ĖĄ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ   ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą   ‚Ėą‚Ėą‚Ėď ‚Ėą‚Ėą‚Ėą‚ĖĄ    ‚Ėą      ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą  ‚Ėą‚Ėą‚ĖĎ ‚Ėą‚Ėą  ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą    ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą ‚ĖĄ‚ĖĄ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď   ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ    |
#| ‚Ėď‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ ‚Ėď‚Ėą‚Ėą‚Ėí‚Ėď  ‚Ėą‚Ėą‚Ėí ‚Ėď‚Ėí‚Ėí‚Ėą‚Ėą‚ĖÄ ‚ĖÄ‚Ėą  ‚Ėí‚Ėą‚Ėą‚Ėí  ‚Ėą‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą‚Ėí ‚Ėą‚Ėą ‚ĖÄ‚Ėą   ‚Ėą     ‚Ėą‚Ėą‚Ėí ‚ĖÄ‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą‚Ėí  ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą    ‚Ėí ‚Ėď  ‚Ėą‚Ėą‚Ėí ‚Ėď‚Ėí   ‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėą‚Ėą‚ĖÄ‚Ėą‚Ėą‚Ėą    |
#| ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĄ‚Ėą‚Ėą‚Ėí‚Ėą‚Ėą‚Ėí‚Ėí ‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚Ėď‚Ėą    ‚ĖĄ ‚Ėí‚Ėą‚Ėą‚ĖĎ  ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą  ‚ĖÄ‚Ėą ‚Ėą‚Ėą‚Ėí   ‚Ėí‚Ėą‚Ėą‚ĖĎ‚ĖĄ‚ĖĄ‚ĖĄ‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖĎ  ‚Ėą‚Ėą‚Ėí‚ĖĎ ‚Ėď‚Ėą‚Ėą‚ĖĄ   ‚Ėí ‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėí‚ĖĎ   ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĎ   |
#| ‚Ėí‚Ėą‚Ėą‚ĖĎ‚Ėą‚ĖÄ  ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚ĖĎ ‚Ėď‚Ėą‚Ėą‚Ėď ‚ĖĎ ‚Ėí‚Ėď‚Ėď‚ĖĄ ‚ĖĄ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą   ‚Ėą‚Ėą‚ĖĎ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚Ėď‚Ėą‚Ėą‚Ėí  ‚Ėź‚ĖĆ‚Ėą‚Ėą‚Ėí   ‚ĖĎ‚Ėď‚Ėą  ‚Ėą‚Ėą‚Ėď‚ĖĎ‚Ėď‚Ėą ‚ĖĎ‚Ėą‚Ėą ‚Ėí‚Ėą‚Ėą   ‚Ėą‚Ėą‚ĖĎ  ‚Ėí   ‚Ėą‚Ėą‚Ėí‚ĖĎ ‚Ėď‚Ėą‚Ėą‚Ėď ‚ĖĎ    ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĎ‚ĖĎ‚Ėí |
#| ‚ĖĎ‚Ėď‚Ėą  ‚ĖÄ‚Ėą‚Ėď‚ĖĎ‚Ėą‚Ėą‚ĖĎ  ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĎ ‚Ėí ‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ ‚ĖĎ‚ĖĎ ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď‚Ėí‚ĖĎ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖĎ   ‚Ėď‚Ėą‚Ėą‚ĖĎ   ‚ĖĎ‚Ėí‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėí‚ĖĎ‚Ėď‚Ėą‚Ėí‚ĖĎ‚Ėą‚Ėą‚Ėď‚ĖĎ ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď‚Ėí‚ĖĎ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėí‚Ėí  ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĎ    ‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖĎ‚Ėí  |
#| ‚ĖĎ‚Ėí‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėí‚ĖĎ‚Ėď    ‚Ėí ‚ĖĎ‚ĖĎ   ‚ĖĎ ‚ĖĎ‚Ėí ‚Ėí  ‚ĖĎ‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ‚Ėď  ‚ĖĎ ‚Ėí‚ĖĎ   ‚Ėí ‚Ėí     ‚ĖĎ‚Ėí   ‚Ėí  ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚Ėí ‚Ėí‚Ėď‚Ėí ‚Ėí ‚ĖĎ  ‚Ėí ‚ĖĎ‚ĖĎ      ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ  |
#| ‚Ėí‚ĖĎ‚Ėí   ‚ĖĎ  ‚Ėí ‚ĖĎ    ‚ĖĎ      ‚ĖĎ  ‚Ėí     ‚ĖĎ ‚Ėí ‚Ėí‚ĖĎ  ‚Ėí ‚ĖĎ‚ĖĎ ‚ĖĎ‚ĖĎ   ‚ĖĎ ‚Ėí‚ĖĎ     ‚ĖĎ   ‚ĖĎ  ‚Ėí ‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ  ‚ĖĎ ‚Ėí ‚Ėí‚ĖĎ ‚ĖĎ ‚ĖĎ‚Ėí  ‚ĖĎ ‚ĖĎ    ‚ĖĎ         ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ  |
#|  ‚ĖĎ    ‚ĖĎ  ‚Ėí ‚ĖĎ  ‚ĖĎ      ‚ĖĎ        ‚ĖĎ ‚ĖĎ ‚ĖĎ ‚Ėí   ‚Ėí ‚ĖĎ   ‚ĖĎ   ‚ĖĎ ‚ĖĎ    ‚ĖĎ ‚ĖĎ   ‚ĖĎ  ‚ĖĎ  ‚ĖĎ‚ĖĎ ‚ĖĎ‚ĖĎ ‚ĖĎ ‚ĖĎ ‚Ėí  ‚ĖĎ  ‚ĖĎ  ‚ĖĎ    ‚ĖĎ               ‚ĖĎ  ‚ĖĎ    |
#|  ‚ĖĎ       ‚ĖĎ           ‚ĖĎ ‚ĖĎ          ‚ĖĎ ‚ĖĎ   ‚ĖĎ           ‚ĖĎ          ‚ĖĎ  ‚ĖĎ  ‚ĖĎ  ‚ĖĎ    ‚ĖĎ ‚ĖĎ        ‚ĖĎ                            |
#|       ‚ĖĎ              ‚ĖĎ                                                                                               |
#|----------------------------------------------------------------------------------------------------------------------|
#|             < B I T C O I N  G H O S T > < D E F E N W Y C K E > < R E A D  T H E  W H I T E P A P E R >             |
#|----------------------------------------------------------------------------------------------------------------------|
#| PROJECT: Bitcoin Ghost                                                                                               |
#| REPO: https://github.com/bitcoin-ghost                                                                               |
#| WEB: https://bitcoinghost.org/                                                                                       |
#| LICENSE: MIT                                                                                                         |
#| FILE: bins/ghost-light-wallet-cli/Cargo.toml                                                                         |
#|======================================================================================================================|

[package]
name = "ghost-light-wallet-cli"
version = "0.1.0"
edition = "2021"
description = "Ghost Light Wallet CLI - Privacy-preserving Bitcoin wallet"
license = "MIT"
repository = "https://github.com/bitcoin-ghost"
readme = "README.md"

[[bin]]
name = "ghost-light-wallet"
path = "src/main.rs"

[dependencies]
# Workspace crates
ghost-light-wallet = { path = "../../crates/ghost-light-wallet" }
ghost-gsp-proto = { path = "../../crates/ghost-gsp-proto" }

# Bitcoin
bitcoin = "0.32"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Terminal UI
rpassword = "7.0"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
