#|======================================================================================================================|
#|  GHOST LIGHT WALLET TUI - Terminal User Interface for Light Wallets                                                 |
#|  A beautiful terminal wallet using ratatui - connects to GSP, keys stay local                                       |
#|======================================================================================================================|

[package]
name = "ghost-light-wallet-tui"
version = "0.1.0"
edition = "2021"
description = "Ghost Light Wallet TUI - Terminal interface for GSP-connected wallets"
license = "MIT"
repository = "https://github.com/bitcoin-ghost"

[[bin]]
name = "ghost-light-wallet-tui"
path = "src/main.rs"

[dependencies]
# Core wallet library (keys stay local)
ghost-light-wallet = { path = "../../crates/ghost-light-wallet" }
ghost-gsp-proto = { path = "../../crates/ghost-gsp-proto" }

# Bitcoin
bitcoin = "0.32"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Utilities
chrono = "0.4"
dirs = "5.0"
