#|======================================================================================================================|
#|                                                                                                                      |
#|  ‚ĖĄ‚ĖĄ‚ĖĄ‚ĖĄ    ‚Ėą‚Ėą‚Ėď‚ĖĄ‚ĖĄ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ   ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą   ‚Ėą‚Ėą‚Ėď ‚Ėą‚Ėą‚Ėą‚ĖĄ    ‚Ėą      ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą  ‚Ėą‚Ėą‚ĖĎ ‚Ėą‚Ėą  ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą    ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą ‚ĖĄ‚ĖĄ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď   ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ    |
#| ‚Ėď‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ ‚Ėď‚Ėą‚Ėą‚Ėí‚Ėď  ‚Ėą‚Ėą‚Ėí ‚Ėď‚Ėí‚Ėí‚Ėą‚Ėą‚ĖÄ ‚ĖÄ‚Ėą  ‚Ėí‚Ėą‚Ėą‚Ėí  ‚Ėą‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą‚Ėí ‚Ėą‚Ėą ‚ĖÄ‚Ėą   ‚Ėą     ‚Ėą‚Ėą‚Ėí ‚ĖÄ‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą‚Ėí  ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą    ‚Ėí ‚Ėď  ‚Ėą‚Ėą‚Ėí ‚Ėď‚Ėí   ‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėą‚Ėą‚ĖÄ‚Ėą‚Ėą‚Ėą    |
#| ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĄ‚Ėą‚Ėą‚Ėí‚Ėą‚Ėą‚Ėí‚Ėí ‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚Ėď‚Ėą    ‚ĖĄ ‚Ėí‚Ėą‚Ėą‚ĖĎ  ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą  ‚ĖÄ‚Ėą ‚Ėą‚Ėą‚Ėí   ‚Ėí‚Ėą‚Ėą‚ĖĎ‚ĖĄ‚ĖĄ‚ĖĄ‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖĎ  ‚Ėą‚Ėą‚Ėí‚ĖĎ ‚Ėď‚Ėą‚Ėą‚ĖĄ   ‚Ėí ‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėí‚ĖĎ   ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĎ   |
#| ‚Ėí‚Ėą‚Ėą‚ĖĎ‚Ėą‚ĖÄ  ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚ĖĎ ‚Ėď‚Ėą‚Ėą‚Ėď ‚ĖĎ ‚Ėí‚Ėď‚Ėď‚ĖĄ ‚ĖĄ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą   ‚Ėą‚Ėą‚ĖĎ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚Ėď‚Ėą‚Ėą‚Ėí  ‚Ėź‚ĖĆ‚Ėą‚Ėą‚Ėí   ‚ĖĎ‚Ėď‚Ėą  ‚Ėą‚Ėą‚Ėď‚ĖĎ‚Ėď‚Ėą ‚ĖĎ‚Ėą‚Ėą ‚Ėí‚Ėą‚Ėą   ‚Ėą‚Ėą‚ĖĎ  ‚Ėí   ‚Ėą‚Ėą‚Ėí‚ĖĎ ‚Ėď‚Ėą‚Ėą‚Ėď ‚ĖĎ    ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĎ‚ĖĎ‚Ėí |
#| ‚ĖĎ‚Ėď‚Ėą  ‚ĖÄ‚Ėą‚Ėď‚ĖĎ‚Ėą‚Ėą‚ĖĎ  ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĎ ‚Ėí ‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ ‚ĖĎ‚ĖĎ ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď‚Ėí‚ĖĎ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖĎ   ‚Ėď‚Ėą‚Ėą‚ĖĎ   ‚ĖĎ‚Ėí‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėí‚ĖĎ‚Ėď‚Ėą‚Ėí‚ĖĎ‚Ėą‚Ėą‚Ėď‚ĖĎ ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď‚Ėí‚ĖĎ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėí‚Ėí  ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĎ    ‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖĎ‚Ėí  |
#| ‚ĖĎ‚Ėí‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėí‚ĖĎ‚Ėď    ‚Ėí ‚ĖĎ‚ĖĎ   ‚ĖĎ ‚ĖĎ‚Ėí ‚Ėí  ‚ĖĎ‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ‚Ėď  ‚ĖĎ ‚Ėí‚ĖĎ   ‚Ėí ‚Ėí     ‚ĖĎ‚Ėí   ‚Ėí  ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚Ėí ‚Ėí‚Ėď‚Ėí ‚Ėí ‚ĖĎ  ‚Ėí ‚ĖĎ‚ĖĎ      ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ  |
#| ‚Ėí‚ĖĎ‚Ėí   ‚ĖĎ  ‚Ėí ‚ĖĎ    ‚ĖĎ      ‚ĖĎ  ‚Ėí     ‚ĖĎ ‚Ėí ‚Ėí‚ĖĎ  ‚Ėí ‚ĖĎ‚ĖĎ ‚ĖĎ‚ĖĎ   ‚ĖĎ ‚Ėí‚ĖĎ     ‚ĖĎ   ‚ĖĎ  ‚Ėí ‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ  ‚ĖĎ ‚Ėí ‚Ėí‚ĖĎ ‚ĖĎ ‚ĖĎ‚Ėí  ‚ĖĎ ‚ĖĎ    ‚ĖĎ         ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ  |
#|  ‚ĖĎ    ‚ĖĎ  ‚Ėí ‚ĖĎ  ‚ĖĎ      ‚ĖĎ        ‚ĖĎ ‚ĖĎ ‚ĖĎ ‚Ėí   ‚Ėí ‚ĖĎ   ‚ĖĎ   ‚ĖĎ ‚ĖĎ    ‚ĖĎ ‚ĖĎ   ‚ĖĎ  ‚ĖĎ  ‚ĖĎ‚ĖĎ ‚ĖĎ‚ĖĎ ‚ĖĎ ‚ĖĎ ‚Ėí  ‚ĖĎ  ‚ĖĎ  ‚ĖĎ    ‚ĖĎ               ‚ĖĎ  ‚ĖĎ    |
#|  ‚ĖĎ       ‚ĖĎ           ‚ĖĎ ‚ĖĎ          ‚ĖĎ ‚ĖĎ   ‚ĖĎ           ‚ĖĎ          ‚ĖĎ  ‚ĖĎ  ‚ĖĎ  ‚ĖĎ    ‚ĖĎ ‚ĖĎ        ‚ĖĎ                            |
#|       ‚ĖĎ              ‚ĖĎ                                                                                               |
#|----------------------------------------------------------------------------------------------------------------------|
#|             < B I T C O I N  G H O S T > < D E F E N W Y C K E > < R E A D  T H E  W H I T E P A P E R >             |
#|----------------------------------------------------------------------------------------------------------------------|
#| PROJECT: Bitcoin Ghost                                                                                               |
#| REPO: https://github.com/bitcoin-ghost                                                                               |
#| WEB: https://bitcoinghost.org/                                                                                       |
#| LICENSE: MIT                                                                                                         |
#| FILE: Cargo.toml                                                                                                     |
#|======================================================================================================================|

[package]
name = "ghost-pay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ghost Pay L2 node - privacy-preserving payment layer"

[[bin]]
name = "ghost-pay"
path = "src/main.rs"

[dependencies]
# Internal crates
ghost-common = { workspace = true }
ghost-keys = { workspace = true }
ghost-locks = { workspace = true }
ghost-storage = { workspace = true }
ghost-reconciliation = { workspace = true }
wraith-protocol = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI (need env feature for GHOST_PAY_PASSWORD)
clap = { version = "4.5", features = ["derive", "env"] }

# Networking
axum = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Bitcoin
bitcoin = { workspace = true }

# Utilities
hex = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

# Cryptography (H-PAY-2: encrypted key storage, H-2: HMAC auth)
aes-gcm = { workspace = true }
scrypt = "0.11"
getrandom = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# Database (for direct queries on ghost-pay's blocks table)
rusqlite = { workspace = true }

# TLS for HTTPS (CRIT-API-1)
rustls = { workspace = true }
tokio-rustls = { workspace = true }
hyper-util = { workspace = true }
