#|======================================================================================================================|
#|                                                                                                                      |
#|  ‚ĖĄ‚ĖĄ‚ĖĄ‚ĖĄ    ‚Ėą‚Ėą‚Ėď‚ĖĄ‚ĖĄ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ   ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą   ‚Ėą‚Ėą‚Ėď ‚Ėą‚Ėą‚Ėą‚ĖĄ    ‚Ėą      ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą  ‚Ėą‚Ėą‚ĖĎ ‚Ėą‚Ėą  ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą    ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą ‚ĖĄ‚ĖĄ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď   ‚ĖĄ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ    |
#| ‚Ėď‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĄ ‚Ėď‚Ėą‚Ėą‚Ėí‚Ėď  ‚Ėą‚Ėą‚Ėí ‚Ėď‚Ėí‚Ėí‚Ėą‚Ėą‚ĖÄ ‚ĖÄ‚Ėą  ‚Ėí‚Ėą‚Ėą‚Ėí  ‚Ėą‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą‚Ėí ‚Ėą‚Ėą ‚ĖÄ‚Ėą   ‚Ėą     ‚Ėą‚Ėą‚Ėí ‚ĖÄ‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą‚Ėí  ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą    ‚Ėí ‚Ėď  ‚Ėą‚Ėą‚Ėí ‚Ėď‚Ėí   ‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėą‚Ėą‚ĖÄ‚Ėą‚Ėą‚Ėą    |
#| ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĄ‚Ėą‚Ėą‚Ėí‚Ėą‚Ėą‚Ėí‚Ėí ‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚Ėď‚Ėą    ‚ĖĄ ‚Ėí‚Ėą‚Ėą‚ĖĎ  ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą‚Ėí‚Ėď‚Ėą‚Ėą  ‚ĖÄ‚Ėą ‚Ėą‚Ėą‚Ėí   ‚Ėí‚Ėą‚Ėą‚ĖĎ‚ĖĄ‚ĖĄ‚ĖĄ‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖĎ  ‚Ėą‚Ėą‚Ėí‚ĖĎ ‚Ėď‚Ėą‚Ėą‚ĖĄ   ‚Ėí ‚Ėď‚Ėą‚Ėą‚ĖĎ ‚Ėí‚ĖĎ   ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĎ   |
#| ‚Ėí‚Ėą‚Ėą‚ĖĎ‚Ėą‚ĖÄ  ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚ĖĎ ‚Ėď‚Ėą‚Ėą‚Ėď ‚ĖĎ ‚Ėí‚Ėď‚Ėď‚ĖĄ ‚ĖĄ‚Ėą‚Ėą‚Ėí‚Ėí‚Ėą‚Ėą   ‚Ėą‚Ėą‚ĖĎ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚Ėď‚Ėą‚Ėą‚Ėí  ‚Ėź‚ĖĆ‚Ėą‚Ėą‚Ėí   ‚ĖĎ‚Ėď‚Ėą  ‚Ėą‚Ėą‚Ėď‚ĖĎ‚Ėď‚Ėą ‚ĖĎ‚Ėą‚Ėą ‚Ėí‚Ėą‚Ėą   ‚Ėą‚Ėą‚ĖĎ  ‚Ėí   ‚Ėą‚Ėą‚Ėí‚ĖĎ ‚Ėď‚Ėą‚Ėą‚Ėď ‚ĖĎ    ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ĖĎ‚ĖĎ‚Ėí |
#| ‚ĖĎ‚Ėď‚Ėą  ‚ĖÄ‚Ėą‚Ėď‚ĖĎ‚Ėą‚Ėą‚ĖĎ  ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĎ ‚Ėí ‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ ‚ĖĎ‚ĖĎ ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď‚Ėí‚ĖĎ‚ĖĎ‚Ėą‚Ėą‚ĖĎ‚Ėí‚Ėą‚Ėą‚ĖĎ   ‚Ėď‚Ėą‚Ėą‚ĖĎ   ‚ĖĎ‚Ėí‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėí‚ĖĎ‚Ėď‚Ėą‚Ėí‚ĖĎ‚Ėą‚Ėą‚Ėď‚ĖĎ ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėď‚Ėí‚ĖĎ‚Ėí‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėí‚Ėí  ‚Ėí‚Ėą‚Ėą‚Ėí ‚ĖĎ    ‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖÄ‚ĖÄ‚Ėą‚Ėą‚ĖĎ‚Ėí  |
#| ‚ĖĎ‚Ėí‚Ėď‚Ėą‚Ėą‚Ėą‚ĖÄ‚Ėí‚ĖĎ‚Ėď    ‚Ėí ‚ĖĎ‚ĖĎ   ‚ĖĎ ‚ĖĎ‚Ėí ‚Ėí  ‚ĖĎ‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ‚Ėď  ‚ĖĎ ‚Ėí‚ĖĎ   ‚Ėí ‚Ėí     ‚ĖĎ‚Ėí   ‚Ėí  ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚Ėí‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚Ėí ‚Ėí‚Ėď‚Ėí ‚Ėí ‚ĖĎ  ‚Ėí ‚ĖĎ‚ĖĎ      ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ  |
#| ‚Ėí‚ĖĎ‚Ėí   ‚ĖĎ  ‚Ėí ‚ĖĎ    ‚ĖĎ      ‚ĖĎ  ‚Ėí     ‚ĖĎ ‚Ėí ‚Ėí‚ĖĎ  ‚Ėí ‚ĖĎ‚ĖĎ ‚ĖĎ‚ĖĎ   ‚ĖĎ ‚Ėí‚ĖĎ     ‚ĖĎ   ‚ĖĎ  ‚Ėí ‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ  ‚ĖĎ ‚Ėí ‚Ėí‚ĖĎ ‚ĖĎ ‚ĖĎ‚Ėí  ‚ĖĎ ‚ĖĎ    ‚ĖĎ         ‚Ėí ‚ĖĎ‚ĖĎ‚Ėí‚ĖĎ‚Ėí‚ĖĎ ‚ĖĎ  |
#|  ‚ĖĎ    ‚ĖĎ  ‚Ėí ‚ĖĎ  ‚ĖĎ      ‚ĖĎ        ‚ĖĎ ‚ĖĎ ‚ĖĎ ‚Ėí   ‚Ėí ‚ĖĎ   ‚ĖĎ   ‚ĖĎ ‚ĖĎ    ‚ĖĎ ‚ĖĎ   ‚ĖĎ  ‚ĖĎ  ‚ĖĎ‚ĖĎ ‚ĖĎ‚ĖĎ ‚ĖĎ ‚ĖĎ ‚Ėí  ‚ĖĎ  ‚ĖĎ  ‚ĖĎ    ‚ĖĎ               ‚ĖĎ  ‚ĖĎ    |
#|  ‚ĖĎ       ‚ĖĎ           ‚ĖĎ ‚ĖĎ          ‚ĖĎ ‚ĖĎ   ‚ĖĎ           ‚ĖĎ          ‚ĖĎ  ‚ĖĎ  ‚ĖĎ  ‚ĖĎ    ‚ĖĎ ‚ĖĎ        ‚ĖĎ                            |
#|       ‚ĖĎ              ‚ĖĎ                                                                                               |
#|----------------------------------------------------------------------------------------------------------------------|
#|             < B I T C O I N  G H O S T > < D E F E N W Y C K E > < R E A D  T H E  W H I T E P A P E R >             |
#|----------------------------------------------------------------------------------------------------------------------|
#| PROJECT: Bitcoin Ghost                                                                                               |
#| REPO: https://github.com/bitcoin-ghost                                                                               |
#| WEB: https://bitcoinghost.org/                                                                                       |
#| LICENSE: MIT                                                                                                         |
#| FILE: Cargo.toml                                                                                                     |
#|======================================================================================================================|

[package]
name = "ghost-pool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bitcoin Ghost mining pool node"

[lib]
name = "ghost_pool"
path = "src/lib.rs"

[[bin]]
name = "ghost-pool"
path = "src/main.rs"

[dependencies]
# Internal crates
ghost-common = { workspace = true }
ghost-buds = { workspace = true }
ghost-reaper = { workspace = true }
ghost-policy = { workspace = true }
ghost-storage = { workspace = true }
ghost-consensus = { workspace = true }
ghost-accounting = { workspace = true }
ghost-verification = { workspace = true }
ghost-template = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }
config = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
bitcoin = { workspace = true }
getrandom = { workspace = true }

# HTTP client for registry
reqwest = { workspace = true }

# Template Distribution Protocol (SV2) - from crates.io
template_distribution_sv2 = "4.0.2"
codec_sv2 = { version = "4.0.1", features = ["noise_sv2"] }
noise_sv2 = "1.4.1"
binary_sv2 = "5.0.1"
framing_sv2 = "6.0.1"
common_messages_sv2 = "6.0.2"
async-channel = "2.3"

# SV2 Application Helpers (for NoiseTcpStream)
stratum-apps = { path = "../../sv2-apps/stratum-apps", features = ["network", "core"] }

# Key utilities
bs58 = { version = "0.4.0", features = ["check"] }
secp256k1 = { version = "0.28.2", features = ["rand"] }
rand = "0.8"

[features]
# Both ZK consensus and MPC ceremony enabled by default
# ZK parameter generation is deferred to background task to avoid blocking startup
default = ["zk-consensus", "mpc-ceremony"]
# Enable ZK consensus for block/payout proofs
zk-consensus = ["ghost-consensus/zk-consensus", "ghost-zkp"]
# Enable MPC ceremony for ZK parameter generation
mpc-ceremony = ["ghost-consensus/mpc-ceremony", "ghost-mpc"]

[dependencies.ghost-zkp]
workspace = true
optional = true

[dependencies.ghost-mpc]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3.10"
