#|======================================================================================================================|
#|                                                                                                                      |
#|  ▄▄▄▄    ██▓▄▄▄█████▓ ▄████▄   ▒█████   ██▓ ███▄    █      ▄████  ██░ ██  ▒█████    ██████ ▄▄▄█████▓   ▄████████▄    |
#| ▓█████▄ ▓██▒▓  ██▒ ▓▒▒██▀ ▀█  ▒██▒  ██▒▓██▒ ██ ▀█   █     ██▒ ▀█▒▓██░ ██▒▒██▒  ██▒▒██    ▒ ▓  ██▒ ▓▒   ███▀██▀███    |
#| ▒██▒ ▄██▒██▒▒ ▓██░ ▒░▒▓█    ▄ ▒██░  ██▒▒██▒▓██  ▀█ ██▒   ▒██░▄▄▄░▒██▀▀██░▒██░  ██▒░ ▓██▄   ▒ ▓██░ ▒░   ██████████░   |
#| ▒██░█▀  ░██░░ ▓██▓ ░ ▒▓▓▄ ▄██▒▒██   ██░░██░▓██▒  ▐▌██▒   ░▓█  ██▓░▓█ ░██ ▒██   ██░  ▒   ██▒░ ▓██▓ ░    ██████████░░▒ |
#| ░▓█  ▀█▓░██░  ▒██▒ ░ ▒ ▓███▀ ░░ ████▓▒░░██░▒██░   ▓██░   ░▒▓███▀▒░▓█▒░██▓░ ████▓▒░▒██████▒▒  ▒██▒ ░    ██▀▀██▀▀██░▒  |
#| ░▒▓███▀▒░▓    ▒ ░░   ░ ░▒ ▒  ░░ ▒░▒░▒░ ░▓  ░ ▒░   ▒ ▒     ░▒   ▒  ▒ ░░▒░▒░ ▒░▒░▒░ ▒ ▒▓▒ ▒ ░  ▒ ░░      ▒ ░░▒░▒ ░░▒░  |
#| ▒░▒   ░  ▒ ░    ░      ░  ▒     ░ ▒ ▒░  ▒ ░░ ░░   ░ ▒░     ░   ░  ▒ ░▒░ ░  ░ ▒ ▒░ ░ ░▒  ░ ░    ░         ▒ ░░▒░▒░ ░  |
#|  ░    ░  ▒ ░  ░      ░        ░ ░ ░ ▒   ▒ ░   ░   ░ ░    ░ ░   ░  ░  ░░ ░░ ░ ░ ▒  ░  ░  ░    ░               ░  ░    |
#|  ░       ░           ░ ░          ░ ░   ░           ░          ░  ░  ░  ░    ░ ░        ░                            |
#|       ░              ░                                                                                               |
#|----------------------------------------------------------------------------------------------------------------------|
#|             < B I T C O I N  G H O S T > < D E F E N W Y C K E > < R E A D  T H E  W H I T E P A P E R >             |
#|----------------------------------------------------------------------------------------------------------------------|
#| PROJECT: Bitcoin Ghost                                                                                               |
#| REPO: https://github.com/bitcoin-ghost                                                                               |
#| WEB: https://bitcoinghost.org/                                                                                       |
#| LICENSE: MIT                                                                                                         |
#| FILE: Cargo.toml                                                                                                     |
#|======================================================================================================================|

[package]
name = "ghost-keys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Privacy-preserving key derivation for Ghost Pay (BIP-352 style silent payments)"

[dependencies]
# Cryptography
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
sha2 = { workspace = true }
rand = "0.8"
bech32 = "0.11"

# Serialization
serde = { workspace = true }
hex = { workspace = true }

# Parallel scanning
rayon = "1.8"

# Bitcoin
bitcoin = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Constant-time operations for side-channel resistance
subtle = "2"

[dev-dependencies]
rand = "0.8"
